<?xml version="1.0"?>
<package format="2">
  <name>jp_op3_demo</name>
  <version>0.1.0</version>
  <description>
    Japan OP3 default demo
    It includes three demontrations(xxx demo, yyy demo, zzz demo)
  </description>
  <license>Apache 2.0</license>
  <author email="yoshimaru@robotis.com">Yoshimaru</author>
  <maintainer email="yoshimaru@robotis.com">Yoshimaru</maintainer>
  <!-- <url type="website">http://wiki.ros.org/jp_op3_demo</url> -->
  <!-- <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url> -->
  <url type="repository">https://github.com/ROBOTIS-JAPAN-GIT/ROBOTIS-JAPAN-OP3-Demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-JAPAN-GIT/ROBOTIS-JAPAN-OP3-Demo/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>op3_walking_module_msgs</depend>
  <depend>op3_action_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>op3_ball_detector</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <depend>op3_demo</depend>
  <exec_depend>op3_manager</exec_depend>
  <!-- <exec_depend>op3_demo</exec_depend> -->
  <exec_depend>op3_camera_setting_tool</exec_depend>
  <exec_depend>op3_web_setting_tool</exec_depend>
  <exec_depend>ros_madplay_player</exec_depend>
  <!-- <exec_depend>face_detection</exec_depend> -->
</package>
