<?xml version="1.0"?>
<package format="2">
  <name>robotis_op3_demo</name>
  <version>0.1.0</version>
  <description>
    ROS packages for the jp_robotis_op3_demo (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="yoshimaru@robotis.com">Yoshimaru</author>
  <maintainer email="yoshimaru@robotis.com">Yoshimaru</maintainer>
  <!-- <url type="website">http://wiki.ros.org/jp_robotis_op3_demo</url> -->
  <!-- <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url> -->
  <url type="repository">https://github.com/ROBOTIS-JAPAN-GIT/ROBOTIS-JAPAN-OP3-Demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-JAPAN-GIT/ROBOTIS-JAPAN-OP3-Demo/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>op3_ball_detector</exec_depend>
  <exec_depend>op3_bringup</exec_depend>
  <exec_depend>op3_demo</exec_depend>
  <export><metapackage/></export>
</package>
